--- a/src/components/AboutSection/AboutSection.module.css
+++ b/src/components/AboutSection/AboutSection.module.css
@@ -1,12 +1,12 @@
-.sectionTitle {
-  color: var(--blue);
-  text-align: center;
-  font-size: 1.8rem;
-  font-family: var(--GTAmericaMonoRegular);
-  text-transform: uppercase;
-  border-bottom: 1px solid var(--blueBorder);
-  padding: 2rem;
-  display: block;
+.container {
+  background-image: repeating-linear-gradient(
+    45deg,
+    var(--blue),
+    var(--tan) 1px,
+    transparent 0,
+    transparent 50%
+  );
+  background-size: 6px 6px;
 }
 
 .content {
@@ -19,19 +19,24 @@
 
 .heading {
   font-size: 5rem;
-  text-transform: uppercase;
   text-indent: 4em;
   letter-spacing: -0.7px;
   line-height: 1.1;
   width: 80%;
   font-weight: 600;
+  background-color: var(--tan);
+  border: 1px solid var(--blue);
+  padding: 1rem 2rem;
 }
 
 .copy {
-  color: var(--blue);
+  color: var(--tan);
+  background-color: var(--blue);
+  padding: 2rem;
   font-family: var(--GTAmericaMonoRegular);
   font-size: 1.8rem;
   max-width: 424px;
+  letter-spacing: -1px;
 }
 
 .bottom {
