--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -7,6 +7,33 @@
   justify-content: center;
   padding: 16rem 0rem;
   padding-top: 22rem;
+  background-image: repeating-linear-gradient(
+    45deg,
+    var(--blue),
+    var(--tan) 1px,
+    transparent 0,
+    transparent 50%
+  );
+  background-size: 6px 6px;
+}
+
+.heading {
+  background-color: var(--tan);
+  border: 1px solid var(--blue);
+  padding: 1rem 3rem;
+  padding-bottom: 2.5rem;
+  margin: 0;
+  white-space: nowrap;
+  position: relative;
+}
+
+.heading::after {
+  position: absolute;
+  content: "Christian Ware";
+  top: 15px;
+  right: 23px;
+  -webkit-text-stroke: 1.5px var(--blue);
+  -webkit-text-fill-color: transparent;
 }
 
 .copy {
@@ -15,6 +42,10 @@
   font-size: 1.8rem;
   font-family: var(--GTAmericaMonoRegular);
   text-transform: uppercase;
+  background-color: var(--tan);
+  border: 1px solid var(--blue);
+  border-bottom: none;
+  padding: 1rem 3rem;
 }
 
 @media screen and (max-width: 968px) {
