--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -7,6 +7,20 @@
   background-color: var(--tan);
   padding: 1rem;
   border: 1px solid var(--blue);
+  position: relative;
+}
+
+.logoContainer::after {
+  position: absolute;
+  content: "";
+  top: 10px;
+  left: 10px;
+  width: 100%;
+  height: 100%;
+  background-color: var(--blue);
+  border: 1px solid var(--tan);
+
+  z-index: -1;
 }
 
 .span {
