--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,21 +1,11 @@
 .header {
   padding: 1.7rem 2.4rem;
   transition: all 0.3s ease-in-out;
-  background-color: var(--tan);
-  border-bottom: 1px solid var(--blueBorder);
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   z-index: 9999;
-  background-image: repeating-linear-gradient(
-    45deg,
-    var(--blue),
-    var(--tan) 1px,
-    transparent 0,
-    transparent 50%
-  );
-  background-size: 6px 6px;
 }
 
 .navbar {
@@ -53,10 +43,24 @@
   list-style: none;
   position: relative;
   width: 100%;
+  padding: 0rem 2rem;
+  position: relative;
+}
+
+.navItems::after,
+.navItemsii::after {
+  position: absolute;
+  content: "";
+  top: 10px;
+  left: 10px;
+  width: 100%;
+  height: 100%;
+  background-color: var(--blue);
+  border: 1px solid var(--tan);
+  z-index: -1;
 }
 
 .navItems {
-  padding: 1rem;
   border: 1px solid var(--blue);
   width: fit-content;
   margin-left: auto;
@@ -67,7 +71,7 @@
 .navItemsii {
   justify-content: flex-end;
   background-color: var(--tan);
-  padding: 1rem;
+  /* padding: 1rem; */
   border: 1px solid var(--blue);
   width: fit-content;
   margin-left: auto;
@@ -75,9 +79,10 @@
 
 .navItem {
   position: relative;
-  line-height: 1em;
-  font-family: var(--GTAmericaMonoRegular);
-  font-size: 1.6rem;
+  line-height: 1;
+  font-family: var(--barlowCondensed);
+  font-weight: 600;
+  font-size: 1.8rem;
   text-transform: uppercase;
   color: var(--blue);
   user-select: none;
@@ -162,6 +167,12 @@
     border: none;
   }
 
+  .navItems::after,
+  .navItemsii::after {
+    top: 0px;
+    left: 0px;
+  }
+
   .navItem {
     font-size: 3rem;
     line-height: 1;
@@ -177,9 +188,21 @@
 
   .hamburger {
     display: block;
+    position: relative;
     cursor: pointer;
     z-index: 9999;
   }
+
+  /* .hamburger::after {
+    position: absolute;
+    content: "";
+    top: 10px;
+    left: 10px;
+    width: 100%;
+    height: 100%;
+    background-color: var(--blue);
+    z-index: 998;
+  } */
 
   .hamburger .whiteBar:nth-child(2) {
     opacity: 0;
