--- a/src/components/Process/Process.module.css
+++ b/src/components/Process/Process.module.css
@@ -1,6 +1,14 @@
 .container {
   border-top: 1px solid var(--lightBlack);
   padding-bottom: 20rem;
+  background-image: repeating-linear-gradient(
+    45deg,
+    var(--blue),
+    var(--tan) 1px,
+    transparent 0,
+    transparent 50%
+  );
+  background-size: 6px 6px;
 }
 
 .top {
@@ -17,7 +25,6 @@
 .heading {
   grid-column: span 3;
   padding: 2rem;
-  /* padding-bottom: 20rem; */
 }
 
 .middle {
@@ -32,15 +39,16 @@
 .heading {
   padding: 2rem;
   font-size: 5rem;
-  text-transform: uppercase;
   text-indent: 4em;
   letter-spacing: -0.7px;
   line-height: 1.1;
   font-weight: 600;
+  background-color: var(--tan);
 }
 
 .sectionTitle {
-  color: var(--blue);
+  color: var(--tan);
+  background-color: var(--blue);
   border-bottom: 1px solid var(--blueBorder);
   text-align: center;
   font-size: 1.8rem;
@@ -67,6 +75,7 @@
   padding: 2rem;
   position: relative;
   border-right: 1px solid var(--blueBorder);
+  background-color: var(--tan);
 }
 
 .card:nth-child(4) {
@@ -79,9 +88,31 @@
   color: var(--tan);
 }
 
+.indexContainer {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--blue);
+  background-image: repeating-linear-gradient(
+    45deg,
+    var(--blue),
+    var(--tan) 1px,
+    transparent 0,
+    transparent 50%
+  );
+  background-size: 6px 6px;
+}
+
 .index {
-  font-size: 15rem;
+  font-size: 5rem;
   font-family: var(--barlowCondensed);
+}
+
+.card:nth-child(4) .indexContainer {
+  border: 1px solid var(--tan);
 }
 
 .feature {
