--- a/src/components/SectionTitle/SectionTitle.module.css
+++ b/src/components/SectionTitle/SectionTitle.module.css
@@ -1,12 +1,12 @@
 .top {
-  background-image: repeating-linear-gradient(
+  /* background-image: repeating-linear-gradient(
     45deg,
     var(--blue),
     var(--tan) 1px,
     transparent 0,
     transparent 50%
   );
-  background-size: 6px 6px;
+  background-size: 6px 6px; */
   background-color: var(--tan);
   text-align: center;
   border-top: 1px solid var(--blueBorder);
