--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -53,3 +53,11 @@
     padding: 16rem 0rem;
   }
 }
+
+@media screen and (max-width: 568px) {
+  .heading::after {
+      -webkit-text-stroke: 1.5px var(--tan);
+      z-index: -999;
+
+  }
+}
