--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -19,7 +19,6 @@
   height: 100%;
   background-color: var(--blue);
   border: 1px solid var(--tan);
-
   z-index: -1;
 }
 
@@ -34,4 +33,11 @@
   width: 2.5rem;
   height: 2.5rem;
   color: var(--blue);
+}
+
+@media screen and (max-width: 568px) {
+  .logoContainer::after {
+    top: 7px;
+    left: 7px;
+  }
 }
