--- a/src/components/AboutSection/AboutSection.module.css
+++ b/src/components/AboutSection/AboutSection.module.css
@@ -18,11 +18,14 @@
 }
 
 .heading {
-  font-size: 5rem;
+  font-size: 3rem;
+  text-transform: uppercase;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
   text-indent: 4em;
   letter-spacing: -0.7px;
   line-height: 1.1;
-  width: 80%;
   font-weight: 600;
   background-color: var(--tan);
   border: 1px solid var(--blue);
@@ -60,15 +63,10 @@
 @media screen and (max-width: 768px) {
   .heading {
     text-indent: 0em;
+    width: 100%;
   }
 
   .copy {
     max-width: none;
-  }
-}
-
-@media screen and (max-width: 568px) {
-  .heading {
-    font-size: 4rem;
   }
 }
