--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -96,8 +96,6 @@
   z-index: 999;
   position: relative;
   padding: 1rem;
-  border: 1px solid var(--blue);
-  background-color: var(--tan);
 }
 
 .whiteBar {
@@ -164,13 +162,14 @@
     gap: 2rem;
     margin-right: auto;
     width: 100%;
-    border: none;
+    border: none !important;
   }
 
   .navItems::after,
   .navItemsii::after {
     top: 0px;
     left: 0px;
+    border: none;
   }
 
   .navItem {
@@ -184,6 +183,23 @@
     color: var(--blue);
 
     font-family: var(--barlowCondensed);
+  }
+
+  .hamburgerParent {
+    border: 1px solid var(--blue);
+    background-color: var(--tan);
+    position: relative;
+  }
+
+  .hamburgerParent::after {
+    position: absolute;
+    content: "";
+    top: 10px;
+    left: 10px;
+    width: 100%;
+    height: 100%;
+    background-color: var(--blue);
+    z-index: -998;
   }
 
   .hamburger {
@@ -223,4 +239,11 @@
     transform: translateY(2px) rotate(-45deg);
     background-color: var(--blue);
   } */
+}
+
+@media screen and (max-width: 568px) {
+  .hamburgerParent::after {
+    top: 7px;
+    left: 7px;
+  }
 }
