--- a/src/components/Process/Process.module.css
+++ b/src/components/Process/Process.module.css
@@ -38,7 +38,7 @@
 
 .heading {
   padding: 2rem;
-  font-size: 5rem;
+  font-size: 3rem;
   text-indent: 4em;
   letter-spacing: -0.7px;
   line-height: 1.1;
@@ -116,7 +116,7 @@
 }
 
 .feature {
-  font-size: 3rem;
+  font-size: 2rem;
   font-style: normal;
   font-weight: 600;
   margin-bottom: 2rem;
@@ -127,6 +127,7 @@
 .desc {
   color: var(--blue);
   font-family: var(--GTAmericaMonoRegular);
+  letter-spacing: -.8px;
 }
 
 @media screen and (max-width: 968px) {
@@ -198,9 +199,6 @@
     grid-template-columns: repeat(1, 1fr);
   }
 
-  .heading {
-    font-size: 4rem;
-  }
   .card {
     align-items: center;
     justify-content: center;
