--- a/src/components/ContentPadding/ContentPadding.module.css
+++ b/src/components/ContentPadding/ContentPadding.module.css
@@ -1,5 +1,6 @@
 .container {
-  padding: 10rem 5rem;
+  padding: 6rem 5rem;
+  padding-bottom: 20rem;
   background-color: transparent;
   /* border-left: 1px solid var(--lightBlack);
   border-right: 1px solid var(--lightBlack); */
