--- a/src/components/Process/Process.module.css
+++ b/src/components/Process/Process.module.css
@@ -1,6 +1,5 @@
 .container {
   border-top: 1px solid var(--lightBlack);
-  padding-bottom: 20rem;
   background-image: repeating-linear-gradient(
     45deg,
     var(--blue),
@@ -11,25 +10,22 @@
   background-size: 6px 6px;
 }
 
-.top {
-  border-bottom: 1px solid var(--blueBorder);
-}
-
 .topLeft {
   grid-column: span 1;
   height: 100%;
   border-right: 1px solid var(--blueBorder);
 }
 
-.topRight,
-.heading {
-  grid-column: span 3;
-  padding: 2rem;
-}
-
 .middle {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  border-top: 1px solid var(--blue);
+  border-right: 1px solid var(--blue);
+}
+
+.heading {
+  grid-column: span 3;
+  padding: 2rem;
 }
 
 .middleLeft {
@@ -127,48 +123,24 @@
 .desc {
   color: var(--blue);
   font-family: var(--GTAmericaMonoRegular);
-  letter-spacing: -.8px;
+  letter-spacing: -1px;
 }
 
 @media screen and (max-width: 968px) {
-  .top,
   .middle {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
     width: 100%;
-  }
-
-  .top {
-    /* border-top: none; */
-    padding: 3rem;
-  }
-
-  .topLeft {
-    border-top: 1px solid var(--blueBorder);
-    border-bottom: 1px solid var(--blueBorder);
-    border-right: none;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--blue);
-  }
-
-  .topRight {
-    padding-bottom: 5rem;
-    display: none;
   }
 
   .middleLeft {
-    /* display: none; */
-    /* background-color: red; */
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  }
+
+  .heading {
+    border-left: 1px solid var(--blue);
   }
 
   .sectionTitle {
@@ -186,6 +158,11 @@
   .card {
     border-bottom: 1px solid var(--blueBorder);
   }
+
+  .card:nth-child(1),
+  .card:nth-child(3) {
+    border-left: 1px solid var(--blue);
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -194,7 +171,7 @@
   }
 }
 
-@media screen and (max-width: 568px) {
+@media screen and (max-width: 668px) {
   .bottom {
     grid-template-columns: repeat(1, 1fr);
   }
@@ -204,7 +181,10 @@
     justify-content: center;
     border-right: none;
     gap: 5rem;
+    padding-top: 5rem;
     padding-bottom: 5rem;
+    border-left: 1px solid var(--blue);
+    border-right: 1px solid var(--blue);
   }
 
   .desc {
