--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -38,14 +38,41 @@
 
 .copy {
   color: var(--blue);
-  text-align: center;
-  font-size: 1.8rem;
-  font-family: var(--GTAmericaMonoRegular);
+  font-size: 2rem;
+  font-family: var(--barlowCondensed);
+  font-weight: 600;
   text-transform: uppercase;
   background-color: var(--tan);
+  padding: 1rem;
   border: 1px solid var(--blue);
-  border-bottom: none;
-  padding: 1rem 3rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2rem;
+  z-index: 1;
+}
+
+.copy::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--tan);
+  z-index: -1; 
+}
+
+.copy::after {
+  content: "";
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 100%;
+  height: 100%;
+  background-color: var(--blue);
+  z-index: -2;
 }
 
 @media screen and (max-width: 968px) {
@@ -56,8 +83,7 @@
 
 @media screen and (max-width: 568px) {
   .heading::after {
-      -webkit-text-stroke: 1.5px var(--tan);
-      z-index: -999;
-
+    -webkit-text-stroke: 1.5px var(--tan);
+    z-index: -999;
   }
 }
