--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -199,6 +199,7 @@
     width: 100%;
     height: 100%;
     background-color: var(--blue);
+    border: 1px solid var(--tan);
     z-index: -998;
   }
 
@@ -208,17 +209,6 @@
     cursor: pointer;
     z-index: 9999;
   }
-
-  /* .hamburger::after {
-    position: absolute;
-    content: "";
-    top: 10px;
-    left: 10px;
-    width: 100%;
-    height: 100%;
-    background-color: var(--blue);
-    z-index: 998;
-  } */
 
   .hamburger .whiteBar:nth-child(2) {
     opacity: 0;
