--- a/src/components/PostHero/PostHero.module.css
+++ b/src/components/PostHero/PostHero.module.css
@@ -1,5 +1,4 @@
 .container {
-  padding-bottom: 20rem;
   background-image: repeating-linear-gradient(
     45deg,
     var(--blue),
@@ -21,20 +20,29 @@
 }
 
 .content {
-  border-top: 1px solid var(--blueBorder);
-  border-bottom: 1px solid var(--blueBorder);
+  border: 1px solid var(--blueBorder);
   display: grid;
   grid-template-columns: 1fr 1.5fr 2fr;
+  margin-bottom: 13rem;
 }
 
-.content {
-  margin-bottom: 15rem;
-}
 
 .box {
   border-right: 1px solid var(--blueBorder);
   position: relative;
   background-color: var(--tan);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.boxTop {
+  width: 100%;
+}
+
+.box:nth-child(3) {
+  border-right: none;
 }
 
 .heading {
@@ -45,6 +53,10 @@
   background-color: var(--blue);
   color: var(--tan);
   border-right: 1px solid var(--tan);
+}
+
+.box:nth-child(3) .heading {
+  border-right: none;
 }
 
 .title {
@@ -76,7 +88,8 @@
   text-transform: uppercase;
 }
 
-.link {
+.link,
+.linkii {
   font-family: var(--barlowCondensed);
   font-size: 2.5rem;
   color: var(--tan);
@@ -85,9 +98,6 @@
   align-items: center;
   justify-content: flex-start;
   gap: 1rem;
-  position: absolute;
-  bottom: 0;
-  left: 0;
   padding: 2rem;
   background-color: var(--blue);
   border: 1px solid var(--blue);
@@ -96,6 +106,14 @@
   width: 100%;
   transition: all 0.2s ease-in;
   letter-spacing: -0.5px;
+  position: relative;
+}
+
+.linkii {
+  background-color: var(--tan);
+  color: var(--blue);
+  border-left: none;
+  border-left: 1px solid var(--tan);
 }
 
 .link:hover .icon {
@@ -109,10 +127,27 @@
   transition: all 0.2s ease-in;
 }
 
-.icon {
+.linkii:hover {
+  background-color: var(--blue);
+  color: var(--tan);
+  transition: all 0.2s ease-in;
+  border-left: 1px solid var(--tan);
+}
+
+.linkii:hover .iconii {
+  color: var(--tan);
+  transition: all 0.2s ease-in;
+}
+
+.icon,
+.iconii {
   width: 2.5rem;
   height: 2.5rem;
   color: var(--tan);
+}
+
+.iconii {
+  color: var(--blue);
 }
 
 .imgParent {
@@ -127,7 +162,6 @@
 }
 
 .img {
-  /* padding: 2rem; */
   object-fit: cover;
   border: 1px solid var(--blue);
 }
@@ -173,19 +207,18 @@
 }
 
 @media screen and (max-width: 568px) {
-  .content {
-    grid-template-columns: repeat(1, 1fr);
-  }
-
   .heading {
     text-align: center;
     font-size: 2.5rem;
   }
 
-  .link {
+  .link,
+  .linkii {
     text-align: center;
     align-items: center;
     justify-content: center;
+    font-size: 2rem;
+    letter-spacing: 0px;
   }
 
   .readBox {
