--- a/src/components/SkillsSection/SkillsSection.module.css
+++ b/src/components/SkillsSection/SkillsSection.module.css
@@ -1,5 +1,4 @@
 .container {
-  padding-bottom: 20rem;
   background-image: repeating-linear-gradient(
     45deg,
     var(--blue),
@@ -13,8 +12,7 @@
 .content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  border-top: 1px solid var(--blueBorder);
-  border-bottom: 1px solid var(--blueBorder);
+  border: 1px solid var(--blueBorder);
 }
 
 .left {
@@ -38,10 +36,6 @@
   cursor: pointer;
   padding: 1rem 2rem;
   transition: all 0.2s ease-in;
-}
-
-.name:nth-child(1) {
-  padding-top: 2rem;
 }
 
 .name:nth-child(18) {
@@ -80,14 +74,6 @@
 @media screen and (max-width: 568px) {
   .content {
     grid-template-columns: repeat(1, 1fr);
-  }
-
-  .left {
-    padding: 3rem 0rem;
-  }
-
-  .name {
-    cursor: default;
   }
 
   .name:nth-child(18) {
