--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -144,6 +144,11 @@
     transition: all 0.3s ease-in;
     border-bottom: 1px solid var(--blueBorder);
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.9);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 1rem;
   }
 
   .navMenu.active {
