--- a/src/components/AboutSection/AboutSection.module.css
+++ b/src/components/AboutSection/AboutSection.module.css
@@ -1,12 +1,13 @@
 .container {
-  background-image: repeating-linear-gradient(
+  /* background-image: repeating-linear-gradient(
     45deg,
     var(--blue),
     var(--tan) 1px,
     transparent 0,
     transparent 50%
   );
-  background-size: 6px 6px;
+  background-size: 6px 6px; */
+  background-color: var(--blue);
 }
 
 .content {
@@ -33,8 +34,8 @@
 }
 
 .copy {
-  color: var(--tan);
-  background-color: var(--blue);
+  color: var(--blue);
+  background-color: var(--tan);
   padding: 2rem;
   font-family: var(--GTAmericaMonoRegular);
   font-size: 1.8rem;
