--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -24,16 +24,36 @@
   font-family: var(--barlowCondensed);
   /* padding-top: 5rem; */
   white-space: nowrap;
+  position: relative;
+}
+
+.headingii::after {
+  position: absolute;
+  content: "Christian Ware";
+  top: 10px;
+  right: 55px;
+  -webkit-text-stroke: 1.5px var(--tan);
+  -webkit-text-fill-color: transparent;
 }
 
 @media screen and (max-width: 768px) {
   .headingii {
     letter-spacing: -2px;
   }
+
+  .headingii::after {
+    top: 10px;
+    right: 30px;
+  }
 }
 
 @media screen and (max-width: 568px) {
   .headingii {
     font-size: 17vw;
+  }
+
+  .headingii::after {
+    -webkit-text-stroke: 1.5px var(--tan);
+    z-index: -999;
   }
 }
