--- a/src/components/WorkSection/WorkSection.module.css
+++ b/src/components/WorkSection/WorkSection.module.css
@@ -1,12 +1,5 @@
 .container {
-  background-image: repeating-linear-gradient(
-    45deg,
-    var(--blue),
-    var(--tan) 1px,
-    transparent 0,
-    transparent 50%
-  );
-  background-size: 6px 6px;
+  background-color: var(--blue);
 }
 
 .content {
@@ -28,6 +21,9 @@
   border-right: 1px solid var(--blueBorder);
   padding: 2rem;
   display: block;
+  border: 1px solid var(--tan);
+  border-right: none;
+  border-bottom: none;
 }
 
 .bottom {
@@ -65,6 +61,8 @@
   font-size: 1.6rem;
   text-transform: uppercase;
   border: 1px solid var(--blue);
+  border-left: 1px solid var(--tan);
+  border-bottom: 1px solid var(--tan);
   transition: all 0.2s ease-in;
 }
 
@@ -114,7 +112,6 @@
   .bottom {
     grid-template-columns: repeat(1, 1fr);
   }
-
 
   .sectionTitle {
     text-align: center;
